RESOLVED FIXED18876
Squirrelfish: ScopeChainNode leak in op_jmp_scopes.
https://bugs.webkit.org/show_bug.cgi?id=18876
Summary Squirrelfish: ScopeChainNode leak in op_jmp_scopes.
Geoffrey Garen
Reported 2008-05-03 12:26:59 PDT
Patch coming.
Attachments
patch (1.17 KB, patch)
2008-05-03 12:28 PDT, Geoffrey Garen
sam: review+
Geoffrey Garen
Comment 1 2008-05-03 12:28:09 PDT
Geoffrey Garen
Comment 2 2008-05-03 12:39:44 PDT
Committed revision 32839.
Note You need to log in before you can comment on or make changes to this bug.