2008-05-03  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Sam Weinig.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=18876
        Squirrelfish: ScopeChainNode leak in op_jmp_scopes.

        SunSpider reports no change.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute): Don't construct a ScopeChain object,
        since the direct threaded interpreter will goto across its destructor.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33328 268f45cc-cd09-0410-ab3c-d52691b4dbfc